; ModuleID = '/home/carl/AnghaBench/linux/kernel/sched/extr_cputime.c_account_system_index_time.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/sched/extr_cputime.c_account_system_index_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @account_system_index_time(%struct.task_struct* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.task_struct*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.task_struct* %0, %struct.task_struct** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %9 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = add nsw i32 %10, %7
  store i32 %11, i32* %9, align 4
  %12 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @account_group_system_time(%struct.task_struct* %12, i32 %13)
  %15 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @task_group_account_field(%struct.task_struct* %15, i32 %16, i32 %17)
  %19 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %20 = call i32 @acct_account_cputime(%struct.task_struct* %19)
  ret void
}

declare dso_local i32 @account_group_system_time(%struct.task_struct*, i32) #1

declare dso_local i32 @task_group_account_field(%struct.task_struct*, i32, i32) #1

declare dso_local i32 @acct_account_cputime(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
